// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderMenu renders when logged in 1`] = `
<Menu
  className="__HeaderMenu__"
  mode="horizontal"
  selectable={false}
  theme="dark"
>
  <SubMenu
    key="help"
    popupClassName="header-submenu ant-menu-dark"
    title="Help"
  >
    <MenuItem
      key="help.search-tips"
    >
      <ExternalLink
        as="a"
        href="https://help.inspirehep.net/knowledge-base/inspire-paper-search"
      >
        Search Tips
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="help.tour"
    >
      <Connect(LinkLikeButton)>
        Take the tour
      </Connect(LinkLikeButton)>
    </MenuItem>
    <MenuItem
      key="help.help-center"
    >
      <ExternalLink
        as="a"
        href="https://help.inspirehep.net"
      >
        Help Center
      </ExternalLink>
    </MenuItem>
  </SubMenu>
  <SubMenu
    key="submit"
    popupClassName="header-submenu ant-menu-dark"
    title="Submit"
  >
    <MenuItem
      key="submit.literature"
    >
      <Link
        to="/submissions/literature"
      >
        Literature
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.author"
    >
      <Link
        to="/submissions/authors"
      >
        Author
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.job"
    >
      <Link
        to="/submissions/jobs"
      >
        Job
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.seminar"
    >
      <Link
        to="/submissions/seminars"
      >
        Seminar
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.conference"
    >
      <Link
        to="/submissions/conferences"
      >
        Conference
      </Link>
    </MenuItem>
  </SubMenu>
  <SubMenu
    data-test-id="account"
    key="account"
    popupClassName="header-submenu ant-menu-dark"
    title="Account"
  >
    <MenuItem
      key="my-profile"
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={
          <p>
            There is no profile associated to your account. Please contact us at
             
            <a
              href="mailto:authors@inspirehep.net"
            >
              authors@inspirehep.net
            </a>
          </p>
        }
      >
        <Button
          disabled={true}
          ghost={true}
        >
          My profile
        </Button>
      </Tooltip>
    </MenuItem>
    <MenuItem
      key="logout"
    >
      <LinkLikeButton
        dataTestId="logout"
        onClick={[MockFunction]}
      >
        Logout
      </LinkLikeButton>
    </MenuItem>
  </SubMenu>
</Menu>
`;

exports[`HeaderMenu renders when not logged in 1`] = `
<Menu
  className="__HeaderMenu__"
  mode="horizontal"
  selectable={false}
  theme="dark"
>
  <SubMenu
    key="help"
    popupClassName="header-submenu ant-menu-dark"
    title="Help"
  >
    <MenuItem
      key="help.search-tips"
    >
      <ExternalLink
        as="a"
        href="https://help.inspirehep.net/knowledge-base/inspire-paper-search"
      >
        Search Tips
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="help.tour"
    >
      <Connect(LinkLikeButton)>
        Take the tour
      </Connect(LinkLikeButton)>
    </MenuItem>
    <MenuItem
      key="help.help-center"
    >
      <ExternalLink
        as="a"
        href="https://help.inspirehep.net"
      >
        Help Center
      </ExternalLink>
    </MenuItem>
  </SubMenu>
  <SubMenu
    key="submit"
    popupClassName="header-submenu ant-menu-dark"
    title="Submit"
  >
    <MenuItem
      key="submit.literature"
    >
      <Link
        to="/submissions/literature"
      >
        Literature
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.author"
    >
      <Link
        to="/submissions/authors"
      >
        Author
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.job"
    >
      <Link
        to="/submissions/jobs"
      >
        Job
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.seminar"
    >
      <Link
        to="/submissions/seminars"
      >
        Seminar
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.conference"
    >
      <Link
        to="/submissions/conferences"
      >
        Conference
      </Link>
    </MenuItem>
  </SubMenu>
  <MenuItem
    key="login"
  >
    <Link
      to="/user/login"
    >
      Login
    </Link>
  </MenuItem>
</Menu>
`;
